fix: remove unnecessary padding on mobile

--- a/assets/scss/partials/layout/_nav.scss
+++ b/assets/scss/partials/layout/_nav.scss
@@ -7,6 +7,7 @@
     }
     margin: 0;
     list-style: none;
+    padding: 0;
     width: 100%;
 
     &-item {
